fix: gap and responsive

--- a/editor-components/feature/feature10/feature10.module.scss
+++ b/editor-components/feature/feature10/feature10.module.scss
@@ -27,6 +27,7 @@
                         background-color: transparent;
                         font-size: 1.5rem;
                         color: var(--composer-font-color-primary);
+                        padding: var(--composer-gap-xs);
                     }
                 }
             }
