--- a/editor-components/feature/feature15/feature15.module.scss
+++ b/editor-components/feature/feature15/feature15.module.scss
@@ -11,7 +11,7 @@
 }
 
 .video-overlay {
-
+    content: "";
 }
 
 .container {
