--- a/editor-components/feature/feature2/feature2.module.scss
+++ b/editor-components/feature/feature2/feature2.module.scss
@@ -6,7 +6,7 @@
     .max-content {
         .wrapper {
             margin-top: var(--composer-gap-md);
-            row-gap: var(--composer-gap-xl);
+            gap: var(--composer-gap-xl);
 
             .item {
                 display: flex;
