--- a/editor-components/feature/feature21/feature21.module.scss
+++ b/editor-components/feature/feature21/feature21.module.scss
@@ -192,6 +192,10 @@
             .right-side {
                 align-items: flex-start;
                 width: 100%;
+                
+                &.center-alignment {
+                    justify-content: center;
+                }
             }
         }
 
